:cn: 升级依赖版本