@@ -100,8 +100,7 @@ public class AES128Encrypt {
         Cipher cipher = Cipher.getInstance("AES/ECB/PKCS5Padding");
         cipher.init(Cipher.ENCRYPT_MODE, key);
         byte[] bs = cipher.doFinal(input.getBytes(StandardCharsets.UTF_8));
-
-        return new sun.misc.BASE64Encoder().encode(bs);
+        return Base64.getEncoder().encodeToString(bs);
     }
 
     /**
